<resources>
    <string name="app_name">LightNight</string>
    <string name="notification">Notification</string>
    <string name="b">B</string>
    <string name="hello_you_are_thing_about_lorem_fafa_gerifa_nimedi_daloi_feriu_polisa_kintic_lolcer_rfr_rrrjopad">Hello_you_are_thing_about_lorem_fafa_gerifa_nimedi_daloi_feriu_polisa_kintic_lolcer_rfr_rrrjopad</string>
    <string name="t">T</string>
    <string name="naimedi_daloi_hello_you_are_thing_about_lorem_fafa_gerifa_feriu_polisa_kintic_lolcer_rfr_rrrjopad">Naimedi_daloi_hello_you_are_thing_about_lorem_fafa_gerifa_feriu_polisa_kintic_lolcer_rfr_rrrjopad</string>
    <string name="x">X</string>
    <string name="about_lorem_fafa_gerifa_nimedi_daloi_feriuhello_you_are_thing_polisa_kintic_lolcer_rfr_rrrjopad">About_lorem_fafa_gerifa_nimedi_daloi_feriuhello_you_are_thing_polisa_kintic_lolcer_rfr_rrrjopad</string>
    <string name="s">S</string>
    <string name="fafa_gerifa_nimedi_daloi_feriuhello_you_are_thing_about_lorem_polisa_kintic_lolcer_rfr_rrrjopad">Fafa_gerifa_nimedi_daloi_feriuhello_you_are_thing_about_lorem_polisa_kintic_lolcer_rfr_rrrjopad</string>
    <string name="rojara_opad_hello_you_are_thing_about_lorem_fafa_gerifa_nimedi_daloi_feriu_polisa_kintic_lolcer_rf">Rojara_opad_hello_you_are_thing_about_lorem_fafa_gerifa_nimedi_daloi_feriu_polisa_kintic_lolcer_rf</string>
    <string name="j">J</string>
    <string name="you_are_thing_about_hello_lorem_fafa_gerifa_nimedi_daloi_feriu_polisa_kintic_lolcer_rfr_rrrjopad">You_are_thing_about_hello_lorem_fafa_gerifa_nimedi_daloi_feriu_polisa_kintic_lolcer_rfr_rrrjopad</string>
    <string name="aa">s</string>
</resources>