<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".MainActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <androidx.appcompat.widget.SwitchCompat
            android:id="@+id/btnSwitch"
            android:layout_width="40sp"
            android:layout_margin="20sp"
            android:layout_height="30dp" />

        <TextView
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginHorizontal="10dp"
            android:layout_weight="1"
            android:text="@string/notification"
            android:textAlignment="center"
            android:textSize="20sp"
            android:textStyle="bold" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="5dp"
            android:layout_marginEnd="10dp"
            android:background="@drawable/ic_baseline_notes_24"
            android:gravity="end" />


    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="10dp"
        android:layout_marginTop="50dp"
        android:background="@drawable/shape">

        <com.google.android.material.button.MaterialButton
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_margin="5dp"
            android:layout_marginTop="15dp"
            android:layout_weight="1"
            android:background="@drawable/sasa"
            android:text="@string/b"
            android:textColor="#FFFFFF"
            app:cornerRadius="500dp" />

        <TextView
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="5dp"
            android:layout_weight="5"
            android:text="@string/hello_you_are_thing_about_lorem_fafa_gerifa_nimedi_daloi_feriu_polisa_kintic_lolcer_rfr_rrrjopad"
            android:textStyle="bold" />


    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="10dp"
        android:layout_marginVertical="20dp"
        android:background="@drawable/shape">

        <com.google.android.material.button.MaterialButton
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_margin="5dp"
            android:layout_marginTop="15dp"
            android:layout_weight="1"
            android:background="@drawable/sasa"
            android:text="@string/t"
            android:textColor="#FFFFFF"
            app:cornerRadius="500dp" />

        <TextView
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="5dp"
            android:layout_weight="5"
            android:text="@string/naimedi_daloi_hello_you_are_thing_about_lorem_fafa_gerifa_feriu_polisa_kintic_lolcer_rfr_rrrjopad"
            android:textStyle="bold" />

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="10dp"
        android:background="@drawable/shape">

        <com.google.android.material.button.MaterialButton
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_margin="5dp"
            android:layout_marginTop="15dp"
            android:layout_weight="1"
            android:background="@drawable/sasa"
            android:text="@string/x"
            android:textColor="#FFFFFF"
            app:cornerRadius="500dp" />

        <TextView
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="5dp"
            android:layout_weight="5"
            android:text="@string/about_lorem_fafa_gerifa_nimedi_daloi_feriuhello_you_are_thing_polisa_kintic_lolcer_rfr_rrrjopad"
            android:textStyle="bold" />


    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="10dp"
        android:layout_marginVertical="20dp"
        android:background="@drawable/shape">

        <com.google.android.material.button.MaterialButton
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_margin="5dp"
            android:layout_marginTop="15dp"
            android:layout_weight="1"
            android:background="@drawable/sasa"
            android:text="@string/s"
            android:textColor="#FFFFFF"
            app:cornerRadius="500dp" />

        <TextView
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="5dp"
            android:layout_weight="5"
            android:text="@string/fafa_gerifa_nimedi_daloi_feriuhello_you_are_thing_about_lorem_polisa_kintic_lolcer_rfr_rrrjopad"
            android:textStyle="bold" />


    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="10dp"
        android:background="@drawable/shape">

        <com.google.android.material.button.MaterialButton
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_margin="5dp"
            android:layout_marginTop="15dp"
            android:layout_weight="1"
            android:background="@drawable/sasa"
            android:text="@string/aa"
            android:textColor="#FFFFFF"
            app:cornerRadius="500dp" />

        <TextView
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="5dp"
            android:layout_weight="5"
            android:text="@string/rojara_opad_hello_you_are_thing_about_lorem_fafa_gerifa_nimedi_daloi_feriu_polisa_kintic_lolcer_rf"
            android:textStyle="bold" />


    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="10dp"
        android:layout_marginVertical="20dp"
        android:background="@drawable/shape">

        <com.google.android.material.button.MaterialButton
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_margin="5dp"
            android:layout_marginTop="15dp"
            android:layout_weight="1"
            android:background="@drawable/sasa"
            android:text="@string/j"
            android:textColor="#FFFFFF"
            app:cornerRadius="500dp" />

        <TextView
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="5dp"
            android:layout_weight="5"
            android:text="@string/you_are_thing_about_hello_lorem_fafa_gerifa_nimedi_daloi_feriu_polisa_kintic_lolcer_rfr_rrrjopad"
            android:textStyle="bold" />


    </LinearLayout>

</LinearLayout>